   (formerly almost all of the 1500 tests in bigfltrt.inc would fail. Now we
   fail "only" 868 of 2014 tests, and most of them since the test dies early.
 * added stubs for round, bfround, bround and certain others
2002-03-19 v0.04 Tels
 * 5/7+3/7 hung under "Math::BigInt upgrade =>" (forgot local upgrade = undef)
 * better testsuite
 * added & fixed isa()
 * new() can handle Lite
2002-03-26 v0.05 Tels
 * various bugfixes
   (local undef upgrade, Bigint handling, handling of string arguments)
 * fixed up isa()
 * removed some old and wrong comments
2002-05-23 v0.06 Tels
 * added import() routine
 * support for 'use Math::BigRat with => Foo::Bar;'
 * support for 'use Math::BigRat lib => Foo::Bar;'
 * bnorm() makes sure that both parts (n and d) are of class $MBI
 * more documentation
 * bugfix in new() with two arguments
 * INSTALLDIRS => perl
2002-06-04 v0.07 Tels
 * bfac() now works for integers (x/1), and returns $x->bnan() instead of
   Math::BigRat->bnan() (modify in-place)
 * bpow() faster for x/1 ** y/1 and x/z ** y/1 cases (some of the speedups are
   two-digit factors :) - also some bugfixes
 * bpow() no longer litters stdout
 * removed some (all of them commented out) debug prints to reduce footprint
 * shortened testfile bigrat.t
 * some hardcoded 'Math::BigInt' replaced with '$MBI'
 * bceil() would leave -0 in some cases
 * (more) tests (all in all 628) for:
   bceil/bfloor/bpow/bfac/parts/denominator/nominator/binc/bdec
 * parts('-3/1') would return (3,1) instead of (-3,1)
 * parts() did not work for NaN, +inf, -inf
 * numerator()/denominator() did not work for inf,-inf,NaN
 * new('1.2.2') was valid (resulted in 12/10 due to bug in BigFloat)
 * new() for some cases left internal state not as 0/0 for NaN, inf, -inf etc
 * binc()/bdec() were missing entirely

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>